# geoparquet-compression-benchmark

./: .python-version  README.md  benchmark.json  benchmark.py  prepdata.py  pyproject.toml
