[tool.poetry]
name = "geoparquet-compression"
version = "0.1.0"
description = "Comparing geoparquet compressions"
authors = ["Jt Miclat <jtmiclat@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "geoparquet_compression"}]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.12.2"
pyogrio = "^0.5.1"
pyarrow = "^11.0.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
